# speech-tech-2026-spring

./: README.md
HW1/: REPORT.md  SpeechTech_HW1.ipynb
HW2/: README.md  out.txt  pyproject.toml  report.ipynb  requirements.txt  wav2vec2decoder.py
HW2/lm/: financial-3gram.arpa
