[project]
name = "assignment2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datasets>=4.8.5",
    "ipywidgets>=8.1.8",
    "jiwer>=4.0.0",
    "levenshtein>=0.27.3",
    "librosa>=0.11.0",
    "llvmlite<0.43",
    "matplotlib>=3.10.9",
    "pandas>=2.3.3",
    "polars>=1.40.1",
    "seaborn>=0.13.2",
    "soundfile>=0.13.1",
    "torch>=2.2.2",
    "torchaudio>=2.2.2",
    "tqdm>=4.67.3",
    "transformers==4.38.2",
]
[tool.uv]
required-environments = [
    "sys_platform == 'darwin' and platform_machine == 'x86_64'"
]
